refactor(rift): re-base Rift adapters on rift-scala-zio (official SDK)
Both Rift MockControl adapters drove the engine through code this repo owned: a
hand-rolled Mountebank JSON protocol over the zio HTTP client, and a hand-written
Panama FFM bridge to a downloaded librift_ffi cdylib. That meant a second protocol
implementation to keep in sync with the engine, a JDK-21/22 class-file split, and
~250 lines of native download/mirror/checksum plumbing in build.sbt.

rift-scala 0.1.0 owns both transports behind one typed `rift.zio.Rift` service, so
the adapters collapse to a single transport-agnostic RiftMockControl serving
container, connect and embedded alike -- the wire format becomes the SDK's problem
rather than ours, covered by its conformance corpus instead of a parallel one here.

Packaging follows from that: the embedded engine and natives are ordinary runtime
ServiceLoader dependencies of rift-java, not a compile target, so
zio-bdd-rift-embedded, -jdk21 and -natives no longer have a reason to exist and fold
into zio-bdd-rift. The rift module's Java floor moves 11 -> 17 because rift-java-core
is class-61 bytecode; every other module stays on the 11 floor.

Rules now address stubs by native StubId rather than client-tracked positional
indexes, so an overlay insert can no longer misroute a later removal. Intercept stays
advertised only where its listener is actually host-reachable.

The portable SPI (mock/) is untouched -- it is the contract, not the adapter.